--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -34,6 +34,6 @@ RUN pip install tensorflow \
     && pip cache purge
 
 # Hugging face
-RUN pip install datasets tokenizers timm 'diffusers[torch]' 'transformers[torch]' \
+RUN pip install datasets tokenizers timm gradio 'diffusers[torch]' 'transformers[torch]' \
     && pip cache purge
 
