--- a/dockerfiles/base/Dockerfile
+++ b/dockerfiles/base/Dockerfile
@@ -8,24 +8,10 @@ USER root
 
 # basic setup
 RUN apt update \
-    && apt install -y software-properties-common apt-transport-https wget curl gnupg ca-certificates sudo \
-    && rm -rf /var/lib/apt/lists/*
-
-# gui support
-RUN apt update \
-    && apt install -y language-pack-en* language-pack-zh* language-pack-gnome-en* language-pack-gnome-zh* \
-    && apt install -y fonts-firacode fonts-wqy-microhei ttf-wqy-zenhei fonts-arphic-ukai fonts-arphic-uming fonts-droid-fallback fonts-noto xfonts-base \
-    && apt install -y libgtk2.0-0 libxshmfence-dev libnss3-dev libatk-bridge2.0-dev libdrm-dev libgtk-3-dev libasound2-dev libcanberra-gtk-module libcanberra-gtk3-module \
-    && apt install -y yaru-theme-* breeze \
-    && rm -rf /var/lib/apt/lists/*
-
-# development setup
-RUN apt update \
-    && add-apt-repository -y ppa:neovim-ppa/stable \
-    && add-apt-repository -y ppa:git-core/ppa \
-    && apt install -y build-essential gdb strace ltrace neovim git ninja-build \
+    && apt install -y software-properties-common apt-transport-https wget curl gnupg ca-certificates \
+    && apt install -y sudo build-essential gdb strace ltrace neovim git ninja-build ccache \
     && bash -c "$(wget -qO - https://apt.llvm.org/llvm.sh)" \
-    && apt install -y libgoogle-glog-dev libgflags-dev libgtest-dev libprotobuf-dev protobuf-compiler libboost-all-dev libgsl-dev libopencv-dev libeigen3-dev \
+    && apt install -y libgoogle-glog-dev libgflags-dev libgtest-dev libboost-all-dev libgsl-dev libopencv-dev libeigen3-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # install cmake
