--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -3,23 +3,12 @@ FROM ${BASE_IMAGE}
 
 ARG DEBIAN_FRONTEND=noninteractive
 
-WORKDIR /workdir
-USER root
-
-RUN apt update \
-    && apt install -y octave liboctave-dev \
-    && rm -rf /var/lib/apt/lists/*
-
-USER xundaoxd
-
-ARG PYTHON_VERSION=3.8
-RUN conda install -y python=${PYTHON_VERSION} \
-    && conda install -y \
+RUN conda install -y \
         ipywidgets jupyterlab ipython \
         numpy matplotlib pandas seaborn scipy scikit-learn \
         pyyaml pillow protobuf \
         pybind11 cython \
-    && /opt/miniconda3/bin/conda clean -a -y
+    && conda clean -a -y
 
 # onnx
 RUN pip install onnxruntime-gpu onnxruntime-tools skl2onnx \
