--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,26 @@ on:
 
 jobs:
   ml:
-    uses: xundaoxd/docker-apps/.github/workflows/build.yml@master
+    uses: ./.github/workflows/build.yml
     with:
       dockerfile: dockerfiles/ml/Dockerfile
-      tag: xundaoxd/ml:latest
+      tag: ghcr.io/xundaoxd/ml:latest
+      platforms: linux/amd64
     secrets: inherit
 
+  sysroot:
+    uses: ./.github/workflows/build.yml
+    with:
+      dockerfile: dockerfiles/ml/Dockerfile.sysroot
+      tag: ghcr.io/xundaoxd/ml:sysroot-latest
+      platforms: linux/arm64
+    secrets: inherit
+
+  ml-cross:
+    uses: ./.github/workflows/build.yml
+    needs: [ml, sysroot]
+    with:
+      dockerfile: dockerfiles/ml/Dockerfile.cross
+      tag: ghcr.io/xundaoxd/ml:cross-latest
+      platforms: linux/amd64
+    secrets: inherit
