--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
       tag:
         required: true
         type: string
-      build-args:
+      platforms:
         required: false
         type: string
     secrets:
@@ -27,14 +27,14 @@ jobs:
       - uses: docker/setup-buildx-action@v2
       - uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - uses: docker/build-push-action@v3
         with:
           context: .
           file: ${{ inputs.dockerfile }}
           tags: ${{ inputs.tag }}
-          build-args: ${{ inputs.build-args }}
+          platforms: ${{ inputs.platforms }}
           push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
