--- a/dockerfiles/ml/Dockerfile.cross
+++ b/dockerfiles/ml/Dockerfile.cross
@@ -1,2 +1,5 @@
-FROM ubuntu:18.04
+FROM ghcr.io/xundaoxd/ml:sysroot-latest as sysroot
+
+FROM ghcr.io/xundaoxd/ml:latest
+COPY --from=sysroot / /sysroot
 
