--- a/dockerfiles/ml/Dockerfile.sysroot
+++ b/dockerfiles/ml/Dockerfile.sysroot
@@ -1,2 +1,9 @@
 FROM ubuntu:18.04
 
+ARG DEBIAN_FRONTEND=noninteractive
+
+# common libs
+RUN apt update \
+    && apt install -y libgoogle-glog-dev libgflags-dev libgtest-dev libboost-all-dev libgsl-dev libeigen3-dev libelf-dev \
+    && rm -rf /var/lib/apt/lists/*
+
