--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -97,6 +97,6 @@ RUN pip install mediapipe \
     && pip cache purge
 
 # Hugging face
-RUN pip install datasets tokenizers timm gradio 'diffusers[torch]' 'transformers[torch]' \
+RUN pip install datasets tokenizers timm gradio 'diffusers[torch]' 'transformers[torch]' sentencepiece \
     && pip cache purge
 
