--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -7,79 +7,11 @@ WORKDIR /workdir
 # basic setup
 RUN apt update \
     && apt install -y software-properties-common apt-transport-https ca-certificates gnupg wget curl sudo \
-    && apt install -y cuda-11-8 build-essential g++-aarch64-linux-gnu \
     && rm -rf /var/lib/apt/lists/*
 
-# utils
-RUN apt update \
-    && add-apt-repository -y ppa:neovim-ppa/stable \
-    && add-apt-repository -y ppa:git-core/ppa \
-    && apt install -y neovim git gdb strace ltrace ninja-build ccache \
-    && apt install -y unzip iproute2 socat graphviz \
-    && rm -rf /var/lib/apt/lists/*
-
-# common libs
-RUN apt update \
-    && apt install -y libgoogle-glog-dev libgflags-dev libgtest-dev libboost-all-dev libgsl-dev libeigen3-dev libelf-dev libasio-dev \
-    && rm -rf /var/lib/apt/lists/*
-
-# install cmake
-ARG CMAKE_VERSION=3.23.1
-RUN sh -c "wget -qO - https://github.com/Kitware/CMake/releases/download/v${CMAKE_VERSION}/cmake-${CMAKE_VERSION}-linux-x86_64.tar.gz | tar -C /opt -xz"
-ENV PATH="/opt/cmake-${CMAKE_VERSION}-linux-x86_64/bin:${PATH}"
-
-# install nodejs
-ARG NODE_VERSION=18.15.0
-RUN sh -c "wget -qO - https://nodejs.org/dist/v${NODE_VERSION}/node-v${NODE_VERSION}-linux-x64.tar.xz | tar -C /opt -xJ"
-ENV PATH="/opt/node-v${NODE_VERSION}-linux-x64/bin:${PATH}"
-
-# install go
-ARG GO_VERSION=1.20.3
-RUN sh -c "wget -qO - https://golang.google.cn/dl/go${GO_VERSION}.linux-amd64.tar.gz | tar -C /opt -xz"
-ENV PATH="/opt/go/bin:${PATH}"
-
-# install bazel
-ARG BAZEL_VERSION=5.2.0
-RUN wget -qO /usr/local/bin/bazel https://github.com/bazelbuild/bazel/releases/download/${BAZEL_VERSION}/bazel-${BAZEL_VERSION}-linux-x86_64 \
-    && chmod +x /usr/local/bin/bazel
-
-# install miniconda3
-ARG PYTHON_VERSION=3.8
-ARG CONDA_PREFIX=/opt/miniconda3
-RUN wget -qO Miniconda3.sh https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh \
-    && chmod +x Miniconda3.sh \
-    && ./Miniconda3.sh -b -p ${CONDA_PREFIX} \
-    && ${CONDA_PREFIX}/bin/conda install -y python=${PYTHON_VERSION} \
-    && ${CONDA_PREFIX}/bin/conda clean -a -y \
-    && rm -rf *
-ENV PATH="${CONDA_PREFIX}/bin:${PATH}"
 
 # create user: xundaoxd
 RUN useradd -m -s /bin/bash xundaoxd \
-    && echo '%xundaoxd ALL=(ALL:ALL) NOPASSWD: ALL' >> /etc/sudoers \
-    && chown xundaoxd:xundaoxd -R ${CONDA_PREFIX}
+    && echo '%xundaoxd ALL=(ALL:ALL) NOPASSWD: ALL' >> /etc/sudoers
 USER xundaoxd
-
-# common
-RUN pip install jupyterlab \
-    && pip install numpy matplotlib \
-    && pip install seaborn pandas \
-    && pip install scipy scikit-learn \
-    && pip install opencv-python opencv-contrib-python Pillow \
-    && pip install PyYAML protobuf \
-    && pip install pybind11 Cython \
-    && pip cache purge
-
-# pytorch
-RUN pip install --index-url https://download.pytorch.org/whl/cu118 torch torchvision torchaudio \
-    && pip cache purge
-
-# onnx
-RUN pip install onnxruntime-gpu onnxruntime-tools onnxoptimizer skl2onnx \
-    && pip cache purge
-
-# Hugging face
-RUN pip install datasets tokenizers transformers 'diffusers[torch]' \
-    && pip install gradio \
-    && pip cache purge
 
