--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -7,8 +7,16 @@ WORKDIR /workdir
 # basic setup
 RUN apt update \
     && apt install -y software-properties-common apt-transport-https ca-certificates gnupg wget curl sudo \
+    && apt install -y cuda-11-8 build-essential g++-aarch64-linux-gnu \
     && rm -rf /var/lib/apt/lists/*
 
+# utils
+RUN apt update \
+    && add-apt-repository -y ppa:neovim-ppa/stable \
+    && add-apt-repository -y ppa:git-core/ppa \
+    && apt install -y neovim git gdb strace ltrace ninja-build ccache \
+    && apt install -y unzip iproute2 socat graphviz \
+    && rm -rf /var/lib/apt/lists/*
 
 # create user: xundaoxd
 RUN useradd -m -s /bin/bash xundaoxd \
