--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /workdir
 RUN apt update \
     && apt upgrade -y \
     && apt install -y software-properties-common apt-transport-https ca-certificates gnupg wget curl sudo \
-    && apt install -y build-essential clang g++-aarch64-linux-gnu \
+    && apt install -y build-essential g++-aarch64-linux-gnu \
     && bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)" \
     && rm -rf /var/lib/apt/lists/*
 
