--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -6,8 +6,9 @@ WORKDIR /workdir
 
 # basic setup
 RUN apt update \
-    && apt upgrade -y \
     && apt install -y software-properties-common apt-transport-https ca-certificates gnupg wget curl sudo \
+    && add-apt-repository -y ppa:ubuntu-toolchain-r/test \
+    && apt upgrade -y \
     && apt install -y build-essential g++-aarch64-linux-gnu \
     && bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)" \
     && update-alternatives --install /usr/bin/clang clang $(ls /usr/bin/clang-* | grep -E 'clang-[0-9]+') 50 \
