--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -19,7 +19,7 @@ RUN apt update \
 RUN apt update \
     && add-apt-repository -y ppa:neovim-ppa/stable \
     && add-apt-repository -y ppa:git-core/ppa \
-    && apt install -y neovim git gdb strace ltrace ninja-build ccache \
+    && apt install -y neovim git gdb strace ltrace meson ninja-build ccache \
     && apt install -y unzip iproute2 socat netcat ffmpeg graphviz \
     && rm -rf /var/lib/apt/lists/*
 
