--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -84,8 +84,8 @@ RUN pip install --index-url https://download.pytorch.org/whl/cu118 torch torchvi
     && pip cache purge
 
 # tensorflow
-RUN pip install https://storage.googleapis.com/tensorflow/linux/gpu/tensorflow_gpu-2.6.0-cp38-cp38-manylinux2010_x86_64.whl \
-    && pip cache purge
+# RUN pip install https://storage.googleapis.com/tensorflow/linux/gpu/tensorflow_gpu-2.6.0-cp38-cp38-manylinux2010_x86_64.whl \
+#     && pip cache purge
 
 # tinygrad
 RUN pip install git+https://github.com/tinygrad/tinygrad.git \
